--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clock</title>
+    <script src="/js/main.js" type="module"></script>
     <style>
         body, html {
             margin: 0;
             padding: 0;
         }
-        canvas {display:block;}
+        canvas {
+            display: block;
+        }
     </style>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-    <script src="js/app.js"></script>
+    <canvas id="screen"></canvas>
 </body>
 </html>
